Home Page Design Changes

--- a/angular.json
+++ b/angular.json
@@ -36,10 +36,12 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [{
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.prod.ts"
-              }],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -48,7 +50,8 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [{
+              "budgets": [
+                {
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
@@ -124,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "charts6"
+  "defaultProject": "charts6",
+  "cli": {
+    "analytics": "0c25e391-f3ce-4c7c-af16-96a9651a06ba"
+  }
 }
